# cloudstack

./: .env.example  .gitignore  Cargo.toml  Dockerfile  OPERATIONS-GAPS.md  README.md  TASKS.md  docker-compose.yml  fix-wrong-zod-imports.js  package-lock.json  package.json  tsconfig.json
agent/: Cargo.toml
agent/src/: auth.rs  docker_ops.rs  main.rs  state.rs  types.rs
backend/: .env  .env.example  Cargo.toml  Dockerfile  README.md
backend/.sqlx/: query-004b9bd80d025ed245ef0b98c436f6ba0ed8cb5dad8c76432b0ee39e102cb371.json  query-0106a2593e3e1d71df02b190f1cafc9c95195990095b5c8ed5d285e7e17493e0.json  query-02be1108f0cd5682d28ab7a8db61b7034e90641df886ba914d7a82ddb59ae4f0.json  query-034e3b1916553e462995488a89adb7808d56c2e41965440e9b7898e6f3ef8838.json  query-03ea78197a23e616b043d337849fdf05b4c11a1fbab0049a9a50c24d18b624ed.json  query-0424039c359b2a470ddcf2b81368ead302e3c2566daa0617e0b82c09d5abe5cf.json  query-04bb457912ad46840280f6cca9c64b142d737696abd04f3c30a052ad05d16483.json  query-066aedd221a0ae469379ebae864def58b6cd9bff0d6b255797747c777555ed99.json  query-06b886e55d96f8f1b620ecf216eb4dd8515b125347e071e06d6cfecd3bb819f2.json  query-06c945e50567c6801f1346d436cdc86a82a4e13dd45d8286295ba37cdbdc045e.json  query-06df4f727432ffdbe0a35a730c5d1c8a2213d15d982c1a317b7420529f00fa4d.json  query-070e444e19d449c65bd12a950ba3de3eb5a3f5018364a79c9ce4daa907048135.json  query-07f2689774a59137ed5b2f774e32ba8df41620da4fb2f38bc513da8db41c3707.json  query-09a4132c0c4f8905c181f428d2f938b4b9732b7a303dce16018ed8c98689bc7d.json  query-09ceafeb2ae670629257089f91c1c3a313ae10484631f53b232c4d7dd2f133b8.json  query-0a2634b88c8428ceb64d2e9b0cb5f728d31388f47206b1cca4efa6e5409ab392.json  query-0bad86eaa6c724ec51fbbb019e112564e549c9561f3c9926c66343fa934344cd.json  query-0ca11717f8baf6e294c48b149e1029dc037e3d7813bb095a325ac7309e145352.json  query-0ceb312e5d51fbe41a75407a2cf80ce53373d5af55f2ed97cb407965ca36c0a4.json  query-0dd2cb30d8915cb9a74b47d1229a70534fc9fcaec6f73c8e42c37506d6e6de2e.json  query-0f82e7cc0810ebde7090f43201419ed15fd99cc8ce748cce77665602996f2442.json  query-10f8573a9b64dedd9bb5dca244bfcfb1da92bf83f22f1d9539637ba15177665e.json  query-112357289adfcf0ecd0a6520e5489998a32bd4a6307f26ea345d6b5aa5ba1174.json  query-118a2d4fbf843d0516294c172530d9d724afcd5c20874577bba1811b6c33575e.json  query-122412f9295c888e0d359158579e595a72eedcf3e8a1f6e521f48bdfc02ba8cc.json  query-12317de9ae5ffe4595a3d1454bcc50f61e8c20c86e93e45b3dd42863339d6ad2.json  query-125c19970dc652c52b799ae2372e08b99108fac878db627f9d9d89f0e8f47ed3.json  query-139c8fe25a0783b2872d9b9256536ad4fb0ca4714f552126e825837c26266559.json  query-155a1156b93facce8586af243473130cc4ec00adfd2e3ba22b7a3148fae6b3e1.json  query-15b19240d20fef7bf5b9ed23d5e0c02c50f9d1e59428bf5b4f330515c9e4b440.json  query-167bae56d4552b75c0dcbce860d7a951dd878d232296a8ac210ffc2fbe9bb2c1.json  query-169f3376d985ee79d751c43448a2f3ae1e26b07f91ef037cb9ba4e25ea77d12a.json  query-16b380c96cbb771427fa7913c69d10a7d86746a7344daca94b44720abdc1945d.json  query-1715de276edd72e33406ec168ccf784ed54576365efbd0be56cd15c60ddd2e1c.json  query-17413019ab0885e3eb905914d5a3f088a46dc22a83096b6e535ec876ad4bf820.json  query-1a4c1463893ae068ddfd7e678309ba0aee86eee56186188dd717f8800a19211c.json  query-1b22078a2b29a942110deb36325eb5762523a66c072a9758adaff2521c211c88.json  query-1b4e1695251d6332ba26220a6eca1447ea1d424d3be66c0e90280461b9468e34.json  query-1b71999cbf545eb82f2b65503565620e0a37563e80202c7564f5af6d89931c86.json  query-1b9b42d8d3f98696e614233930a38dee4ff6fcc3aa132e162922d53d564f7a33.json  (+363 more)
backend/assets/: maintenance.html
(+587 files in other folders)
